# rl-game-experience-capture

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.py
agents/: DESIGN-dino-wm-training.md  DESIGN-game-state-extraction.md  NOTES-libraries-frameworks.md  PLAN-PoE2.md  PLAN.md  ROADMAP.md
exp-cap-cpp/: CMakeLists.txt.old  README.md
include/: gamepad_recorder.h  window_recorder.h
object-detection-mota/: AGENTS.md  README.md  prek.toml  pyproject.toml
object-detection-mota/examples/: run-rf-detr.py
proto/: CMakeLists.txt.old  window_capture.proto
python/: README.md  annotate_video.py  exp2transitions.py  gamepad_recorder.py  requirements.txt  screencap.py
python/poe2/: game_state.py  video_to_game_state.py
python/test_scripts/: screencap_test.py
scripts/: screencap.ps1
src/: gamepad_recorder.cpp  main.cpp  window_recorder.cpp
tests/: CMakeLists.txt
trajectory-recorder-cpp/: AGENTS.md  README.md  conanfile.txt  meson.build
trajectory-recorder-cpp/configs/: path-of-exile-2-game-definition.yaml
trajectory-recorder-cpp/docs/: ARCHITECTURE.md
trajectory-recorder-cpp/include/: ActionMapping.hpp  ActionMappingWorkflow.hpp  ActionMappingYaml.hpp  BinaryIO.hpp  CaptureSelection.hpp  CaptureSelector.hpp  CaptureTarget.hpp  GamepadBindingCapture.hpp  InputLogger.hpp  MapCli.hpp  RecordCli.hpp  RecordingValidator.hpp  Replayer.hpp  Session.hpp  SyncLogger.hpp  TestWindowsSetup.hpp  ValidateCli.hpp  VideoRecorder.hpp  VideoRecorderPipeline.hpp
trajectory-recorder-cpp/protos/: gamepad.proto  meson.build
trajectory-recorder-cpp/scripts/: build.ps1
trajectory-recorder-cpp/specs/button-action-mapping/: PLAN-button-action-mapping.md  PRD-button-action-mapping-refined.md  PRD-button-action-mapping.md
trajectory-recorder-cpp/specs/recorder-initial/: SPEC.md
trajectory-recorder-cpp/specs/tui-window-selection/: IMPL-ui-window-selection.md  PLAN-ui-window-selection.md  PRD-ui-window-selection.md
trajectory-recorder-cpp/specs/validate-recording/: PRD-validate-recording-enhanced.md  PRD-validate-recording.md
trajectory-recorder-cpp/src/: ActionMapping.cpp  ActionMappingWorkflow.cpp  ActionMappingYaml.cpp  CaptureSelection.cpp  CaptureSelector.cpp  GamepadBindingCapture.cpp  InputLogger.cpp  RecordingValidator.cpp  Replayer.cpp  Session.cpp  SyncLogger.cpp  VideoRecorder.cpp  main_convert.cpp  main_map_actions.cpp  main_record.cpp  main_validate.cpp
trajectory-recorder-cpp/tests/: ActionMappingTests.cpp  ActionMappingYamlTests.cpp  BinaryIOTests.cpp  CaptureSelectionTests.cpp  InputLoggerVerboseTests.cpp  MapCliTests.cpp  RecordCliTests.cpp  RecordingValidatorTests.cpp  ValidateCliTests.cpp  VideoRecorderPathTests.cpp
trajectory-recorder-py/recorder-python/: requirements.txt
trajectory-recorder-py/scripts/: echotime.ps1
trajectory-recorder/recorder-cpp/include/: sdl_input_recorder.h
trajectory-recorder/recorder-cpp/proto/: gamepad_input.proto
trajectory-recorder/recorder-cpp/src/: sdl_input_recorder.cpp
trajectory-recorder/recorder-python/: README.md
trajectory-recorder/recorder-python/poe2/: experience_config.py
trajectory-recorder/scripts/: screencap.ps1
